<resources>
    <string name="app_name">BD Education Result</string>

    <string name="start">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_admin">AdminActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="developer_image">DEVELOPER IMAGE</string>
    <string name="developer">App Developer</string>
    <string name="developer_name">Name: Md. Zobayer Hasan Nayem</string>
    <string name="developer_designation">Software Developer of Trodev</string>
    <string name="developer_about">I am Md. Zobayer Hasan Nayem, Now I am currently studying Computer Science and Technology at Bangladesh University Business and Technology.</string>
    <string name="developer_address">Address: Mirpur-02, Rupnagar Abasik Area</string>
    <string name="developer_contact">Contact: +8801615257555</string>
    <string name="developer_email">Gmail: zobayer.dev@gmail.com</string>
    <string name="call_us">Call Us</string>

</resources>