<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".view.admin.AdminDashboard">

    <androidx.cardview.widget.CardView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        app:cardElevation="50dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:paddingVertical="16dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:src="@drawable/nayem_image"
                android:contentDescription="@string/developer_image" />

            <TextView
                android:layout_marginTop="5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textAlignment="center"
                android:textSize="20sp"
                android:fontFamily="@font/ubuntu_bold"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_name"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_designation"
                android:textSize="12sp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_about"
                android:textSize="11sp"
                android:layout_marginTop="10dp"
                android:layout_margin="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_address"
                android:textSize="11sp"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_contact"
                android:textSize="11sp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/developer_email"
                android:textSize="11sp"
                android:layout_marginTop="5dp"
                android:fontFamily="@font/ubuntu_bold"
                android:layout_marginStart="10dp"
                android:textColor="@color/black"
                android:textIsSelectable="true"
                />

            <Button
                android:id="@+id/call_btn"
                android:layout_marginTop="10dp"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_us"
                android:textAllCaps="false"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>